[gd_scene load_steps=5 format=3 uid="uid://bljof475abuce"]

[ext_resource type="Script" path="res://crop/item/lettuce/LettuceItem.gd" id="1_o468b"]
[ext_resource type="Texture2D" uid="uid://omuwmbplog0m" path="res://asset/image/Fantasy Crops.png" id="2_n4t0s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mbfhm"]
atlas = ExtResource("2_n4t0s")
region = Rect2(208, 16, 16, 16)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_i7cat"]
properties/0/path = NodePath(".:state")
properties/0/spawn = true
properties/0/sync = false
properties/0/watch = true
properties/1/path = NodePath(".:delay")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[node name="CropItem" type="Node2D"]
script = ExtResource("1_o468b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_mbfhm")

[node name="BlockingLocation" type="Node2D" parent="."]
position = Vector2(35, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_i7cat")
