[gd_scene load_steps=5 format=3 uid="uid://moo3rojxjye6"]

[ext_resource type="Script" path="res://crop/item/lettuce/LettuceItem.gd" id="1_lxntu"]
[ext_resource type="Texture2D" uid="uid://omuwmbplog0m" path="res://asset/image/Fantasy Crops.png" id="2_viide"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a08c5"]
atlas = ExtResource("2_viide")
region = Rect2(208, 16, 16, 16)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ubfxc"]
properties/0/path = NodePath(".:state")
properties/0/spawn = true
properties/0/sync = false
properties/0/watch = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:delay")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[node name="LettuceItem" type="Node2D"]
script = ExtResource("1_lxntu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_a08c5")

[node name="BlockingLocation" type="Node2D" parent="."]
position = Vector2(35, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ubfxc")
